--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,117 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+#section1{
+  background-image: linear-gradient(to bottom, #1c5380, #06365f);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  z-index: -1;
+}
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+#section2{
+  background-color: white;
+  position: fixed;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  height: 60%;
+  z-index: -1;
+}
+
+#section3{
+  z-index: 1;
+}
+
+#mama-div {
+  display: flex;
+  position: center;
+  justify-content: space-between;
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#div1 {
+  height: 50%;
+  width: 25%;
+  margin: 10% 2% 0 10%;
+}
+
+#div1 img {
+ width: 270px;
+}
+
+#div2 {
+  margin: 10.5% 10% 0 2%;
+}
+
+#small-div1 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 0 15px 0;
+}
+
+#instagram-logo {
+ width: 200px;
+}
+
+#small-div1 a {
+  background-color: #1c5380;
+  color: white;
+  padding: 0px 20px;
+  margin: 0px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+}
+
+#small-div1 a img {
+  height: 30px;
+  align-self: center;
+  padding: 0 10px 0 0;
+}
+
+#small-div2 {
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px 25px;
+
+}
+
+h2 {
+  color: #06365f;
+}
+
+
+footer{
+  margin: 0 15%;
+}
+
+#small-div2 img {
+  height: 50px;
+}
+
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+  list-style-type: none;
+  font-size: 12px
+}
+
+ul a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 600;
+}
+
+#grey-logo {
+  color: #C9C9CA;
+  font-weight: 600;
 }
