Most recent updates

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body {
   background-image: linear-gradient(to bottom, #1C5380, #06365F);
   position: absolute;
   height: 45%;
-  width: 100%;
+  background-size: cover;
   z-index: -1;
 }
 .iphones {
@@ -18,17 +18,17 @@ body {
 .insta {
   width: 400px;
 }
-.all-ul {
+.surface-section {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding-top: 120px;
 }
-.all-iphones {
+.phones {
   width: 800px;
 }
-.logologin {
+.login-logo {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -40,10 +40,11 @@ body {
   justify-content: center;
   align-items: center;
   margin-left: 160px;
-  border-style: solid, #1C5380;
+  border-style: solid, #07253d;
   padding: 10px;
   height: 40px;
   background-color: #1C5380;
+  border-radius: 5%;
 }
 .houselogin h5 {
   font-size: 25px;
@@ -52,16 +53,16 @@ body {
 .houselogin img {
   width: 35px;
 }
-.all-iphones{
+.phones{
   padding-left: 70px;
   width: 700px;
 }
-.h1p {
+.text {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  background-image: url(images/frame.png);
+  background-image: url(frame.png);
   background-repeat: no-repeat;
   background-size: 770px;
   width: 840px;
@@ -69,18 +70,18 @@ body {
   height: 465px;
   margin-top: 30px;
 }
-.h1p h1 {
+.text h2 {
   padding-top: 30px;
   padding-top: 0;
   font-size: 40px;
   width: 420px;
   color: #06365F;
 }
-.h1p p {
+.text p {
   width: 620px;
   font-size: 25px;
 }
-.installapp {
+.app-stores {
   padding-left: 90px;
   width: 250px;
   display: flex;
@@ -113,6 +114,6 @@ ul li {
   padding: 75px 15px;
   font-size: 17px;
 }
-#ee {
-  color: grey;
+#copy {
+  color: rgb(223, 222, 222);
 }
