--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,148 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
+  position: relative;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: linear-gradient(#1c5380, #06365f), url("../images/bgtile.png");
+  background-repeat: no-repeat;
+  background-size: 100% 350px;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.button-login {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 40px;
+  color: rgb(205, 216, 225);
+  background: linear-gradient(#1c5380, #06365f);
+  width: 20%;
+}
+
+.gradient {
+  position: absolute;
+  width: 100%;
+  z-index: -5;
+  background: linear-gradient(#1c5380, #06365f);
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-image: url("../images/frame.png");
+  background-size: 100%;
+  height: 50%;
+}
+
+.content h3,
+p {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.right-half {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 60%;
+  height: 511px;
+}
+
+.left-half {
+  width: 40%;
+  text-align: center;
+}
+
+
+.stores {
+  padding-top: 0;
+  padding-left: 50px;
+  padding-right: 40px;
+  width: 65%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.stores>div {
+  margin-right: 5%;
+}
+
+.stores div {
+  padding: 0;
+}
+
+h3 {
+  color: rgb(59, 99, 135);
+  margin-top: 50px;
+}
+
+.footer {
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.footer a {
+  color: rgb(59, 99, 135);
+  font-weight: bold;
+}
+
+.copyright {
+  color: rgb(195, 196, 197);
+}
+
+button {
+  padding: 0;
+  border: none;
+  background: none;
+  border: 2px solid #3A648A;
+  border-radius: 5%;
+}
+
+.right-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 10%;
+  padding-bottom: 5%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+
+@media (max-width: 1200px) {
+  .left-half img {
+    display: none;
+  }
+
+  .right-half {
+    width: 60%;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 10%;
+    padding-bottom: 5%;
+    align-items: center;
+  }
+
+  .header button {
+    border-radius: 10%;
+    width: 50%;
+  }
 }
