--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,70 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-size: 100vw 30vw;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  
+
+}
+
+.main {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 200px;
+
+}
+
+
+.logo {
+  display: flex;
+  justify-content: space-between;
+}
+
+#phones {
+  display: flex;
+  margin-right: 60px;
+}
+
+button {
+  background-color: #1c5380;
+  color: white;
+  height: 40px;
+  width: 90px;
+  margin-top: 20px;
+  margin-left: 60px;
+
+}
+
+.box {
+  background-image: url(../images/frame.png);
+  background-position: center;
+}
+
+h2 {
+  color:#06365f;
+}
+
+p {
+}
+
+.badges {
+  display: flex;
+  margin-top: 70px;
+}
+
+
+footer {
+  font-weight: bold;
+  text-decoration: none;
+  display: flex;
+  margin-top: 50px;
 }
