--- a/styles/style.css
+++ b/styles/style.css
@@ -45,23 +45,16 @@ body {
 
 
 .hogar  {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: -50px 0 -50px 0;
-  height: 50px;
-  width: 50%;
-  justify-content: space-around;
-  background-color: #1c5380;
-  color: white;
-  border-radius: 7%;
-  margin-left: 50px;
-  
-}
-
-#hogar {
+ 
   display: flex;
   justify-self: flex-end;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 40px;
+  color: rgb(205, 216, 225);
+  background: linear-gradient(#1c5380, #06365f);
+  width: 20%;
 
 }
 
