--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,57 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  border: 5px solid green;
+  background-image: url();
+ 
+  
+}
+ .login {
+   display: inline-flexbox;
+   background-color: blue;
+   width: 50px;
+   color: white;
+ }
+
+
+section{
+  border: 2px solid yellow;
+  width: 1300px;
+  height: 600px;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items:center;
+  padding: 40px;
+}
+
+.text {
+  padding: 200px;
+  display: flexbox;
+}
+
+h1 {
+  color: #06365f ;
+  background-image:url("frame")
+}
+
+nav {
+  width: 1000x;
+  display: flex;
+  justify-content: space-evenly;
+  border: 1px solid blue;
+  padding: 5px;
+  
+}
+
+ul {
+  color: #06365f ;
 }
