--- a/styles/style.css
+++ b/styles/style.css
@@ -12,19 +12,23 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background-image: url('/images/bgtile.png');
-  background-repeat: repeat-x;  
+  background-repeat: repeat-x;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 main {
-  width: 900px;
-  display: flex;    
-  margin: 115px 23% 90px;  
+  /* width: 950px; */
+  display: flex;
+  justify-content: space-evenly;
+  margin: 115px 0 0 0;  
 }
 
 h1 {
   font-size: 1rem;
   color: #06365f;
-  width: 60%;
+  width: 62%;
   line-height: 1.3rem;
 }
 
@@ -35,9 +39,10 @@ p {
 }
 
 .content {
+  width: 600px;
   display: flex;
   flex-direction: column;
-  padding: 0 0 0 50px;  
+  margin: 0 0 0 30px;
 }
 
 .log-in {
@@ -77,7 +82,8 @@ p {
 }
 
 .app-stores {
-  padding: 0 245px 0 48px;  
+  padding-left: 47px;
+  width: 400px;
   display: flex;
   justify-content: space-between;  
 }
@@ -88,6 +94,7 @@ nav {
 }
 
 nav ul {
+  padding-top: 90px;
   display: flex;
   justify-content: space-between;
   list-style-type: none;
@@ -102,4 +109,47 @@ nav li {
 
 #copyright {
   color: #AFAFAF;
+}
+
+@media (max-width: 1450px) {
+    nav ul {
+      padding-top: 30px;
+      flex-direction: column;
+      align-items: center;
+      flex-wrap: wrap;      
+    }
+
+    nav li {
+      line-height: 1rem;
+    }
+}
+
+@media (max-width: 960px) {
+  .phones {
+    display: none;
+  }
+
+  .content {
+    margin: 0;
+  }
+
+  .app-stores {
+    width: 500px;
+    padding-left: 90px;
+  }
+}
+
+@media (max-width: 600px) {
+  .log-in {
+    flex-direction: column;
+  }
+
+  .content {
+    width: 400px;
+  }
+
+  .app-stores {
+    width: 300px;
+    padding-left: 35px;
+  }
 }
