--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,109 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+}
+
+main {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  display: flex;
+  width: 100%;
+}
+
+.rightPart {
+  display: flex;
+  width: 30%;
+  margin: 100px 0 0 10%;
+  justify-content: center;
+}
+
+.leftPart {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  width: 550px;
+  margin: 100px 10% 0 0;
+}
+
+.firstContent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.buttonLogIn {
+  background: #487094;
+  box-shadow: 1px -1px 5px #1c5380;
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: 1px solid #1c5380;
+  width: 110px;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.secondContent {
+  background: white;
+  border-radius: 5px;
+  margin: 30px 0px 30px 0px;
+  padding: 30px;
+  box-shadow: 0px 0px 2px 0px gray;
+  border: none;
+}
+
+h1 {
+  color: #1c5380;
+  font-size: 24px;
+  margin-bottom: 20px;
+  width: 80%;
+}
+
+h4 {
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+.thirdContent img {
+  margin-left: 30px;
+}
+
+.links {
+  width: 100%;
+  text-align: center;
+  margin-top: 60px;
+
+  margin-bottom: 100px;
+  font-weight: 600;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.links a {
+  color: #396990;
+  text-decoration: none;
+  margin: 10px;
+  font-size: 12px;
+}
+
+.links p {
+  color: grey;
+  font-size: 12px;
+  margin-left: 10px;
 }
