--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,96 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* gradient background */
+
+* {
+    margin: 0;
+    padding: 0;
+}
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+}
+
+.page {
+    background: linear-gradient(
+        rgb(85, 120, 150) 0%,
+        rgb(52, 90, 124) 40%,
+        white 40%,
+        white 100%
+    );
+    height: 80vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.right-side {
+    width: 30vw;
+    margin-left: 4rem;
+}
+
+.top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.login-btn {
+    background: linear-gradient(rgb(129, 158, 184) 0%, rgb(85, 120, 150) 100%);
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: auto;
+    color: white;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 0.8rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 10px;
+    cursor: pointer;
+}
+
+.home-icon {
+    margin-right: 0.5rem;
+}
+
+.content-box {
+    background: white;
+    padding: 2rem;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.section-title {
+    color: rgb(65, 97, 124);
+    width: 60%;
+    margin-bottom: 1rem;
+    font-weight: 700;
+}
+
+.section-links > * {
+    margin-right: 1rem;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(129, 158, 184);
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 1rem;
+}
+
+.copyright {
+    color: rgb(175, 175, 175);
+    font-weight: 600;
 }
